Thu Aug 12 23:52:12 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #149547, Markus Lausser:
	
	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): 
	* gtk/gtkcombobox.c (gtk_combo_box_size_request): Don't 
	crash if size_request or size_allocate are called early.

	* gtk/gtkcombobox.c (gtk_combo_box_size_allocate): Protect
	against being allocated too small.

Thu Aug 12 23:18:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkhandlebox.c: Remove an accidentally added include.

2004-08-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaction.c (gtk_action_new): Fix the doc comment to generate
	valid XML.

Thu Aug 12 02:20:54 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Updates

Thu Aug 12 00:07:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.c (gtk_action_new):  Link to information about
	allowed action names.  (#149620, David Malcolm)

2004-08-11  Federico Mena Quintero  <federico@ximian.com>

	Merged from HEAD:

	Fix #149422, #143457:

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_should_respond): Rewrite to take the
	current focus into account, the contents of the save entry, and
	the last focus for the shortcuts list.
	(switch_to_selected_folder): We don't need an assertion on the
	action here.

Wed Aug 11 19:17:28 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_maybe_begin_dragging_row): 
	Don't start a drag if the treeview is only a 
	drag destination.  (#149836, Pawel Salek)

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

Mon Aug  9 00:28:56 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.c (load_svg_at_size): Don't leak the 
	file contents.

2004-08-07  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkkeys-win32.c (update_keymap): Don't hardcode
	mapping of VK_DECIMAL to GDK_KP_Decimal. Instead, let ToAsciiEx()
	map it to what's printed on the keypad decimal key for the current
	input locale (keyboard layout). (#149404)
