@@ -6797,8 +6797,13 @@ gtk_tree_view_row_changed (GtkTreeModel *model,
     }
 
  done:
-  if (!tree_view->priv->fixed_height_mode)
-    install_presize_handler (tree_view);
+  if (tree_view->priv->fixed_height_mode)
+    {
+      if (height > 0) /* we have the size now, ready for resize */
+	gtk_widget_queue_resize (GTK_WIDGET (tree_view));
+    }
+  else
+      install_presize_handler (tree_view);
   if (free_path)
     gtk_tree_path_free (path);
 }
@@ -6897,7 +6902,10 @@ gtk_tree_view_row_inserted (GtkTreeModel *model,
     } 
 
  done:
-  install_presize_handler (tree_view);
+  if (height > 0)
+    gtk_widget_queue_resize (GTK_WIDGET (tree_view));
+  else
+    install_presize_handler (tree_view);
   if (free_path)
     gtk_tree_path_free (path);
 }
